using overflow to test fixing alligment of cards and sections

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ section{
 .navbar-brand{padding:122}
 
 .navbar-avoidance{
+  overflow: hidden;
   text-align: center;
   top:15vh;
   position: relative;
@@ -158,6 +159,7 @@ section{
 }
 
 .cardText{
+  overflow: hidden;
   white-space: normal;
   background:rgb(93, 190, 214) !important;
   min-height: 210px;
